--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="#profile"><img src="img/user.jpg"/></a>
+        <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="#profile"><img src="img/small.jpg"/></a>
           <ul class="nav nav-collapse pull-right">
             <li><a href="#profile"><i class="icon-user"></i> Profile</a></li>
             <li><a href="#skills"><i class="icon-trophy"></i> Skills</a></li>
@@ -56,12 +56,12 @@
     <div class="clearfix">
       <!--Profile container-->
       <div id="profile" class="container">
-        <div class="span3"> <img src="img/mini.png"> </div>
+        <div class="span3"> <img src="img/logo.png"> </div>
         <div class="span5">
-          <h1>Juan Dela Cruz</h1>
-          <h3>Web &amp; Graphics Designer</h3>
-          <p> Hello I am Juan Dela Cruz Web and Graphics Designer from Philipines. If yopu have something to be done just call my name and I will be there. :-) </p>
-          <a href="#" class="hire-me"><i class="icon-paper-plane"></i> Hire Me </a>
+          <h1>arrayCORE</h1>
+          <h3>IT Solutions</h3>
+          <p> Hi, we provide the best solutions. By providing client witn an expert help desk, guaranteed delivery of applications system, mobile apps, cross-platform, and security. All encapsulated in a single outsourced service. We truly offer a total solution to all your IT needs. </p>
+          <a href="#" class="hire-me"><i class="icon-paper-plane"></i> Hire Us </a>
           <div class="row social">
             <ul class="social-icons">
               <li><a href="#" target="_blank"><img src="img/fb.png" alt="facebook"></a></li>
