--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#profile"><i class="icon-user"></i> Profile</a></li>
             <li><a href="#skills"><i class="icon-trophy"></i> Skills</a></li>
             <li><a href="#work"><i class="icon-picture"></i> Work</a></li>
-            <li><a href="#resume"><i class="icon-doc-text"></i> Resume</a></li>
+            <li><a href="#contacts"><i class="icon-doc-text"></i> Contacts</a></li>
           </ul>
           <!-- Everything you want hidden at 940px or less, place within here -->
           <div class="nav-collapse collapse">
@@ -79,48 +79,48 @@
       <!--END: Profile container-->
       <!--Skills container-->
       <div id="skills" class="container">
-        <h2>My Skills</h2>
+        <h2>Our Skills</h2>
         <div class="row">
           <div class="span3">
             <div class="ps">
-              <h3>Ps</h3>
+              <h3>ng</h3>
             </div>
           </div>
           <div class="span5">
-            <h3>Photoshop <span>90%</span></h3>
+            <h3>Angular JS <span>90%</span></h3>
             <div class="expand-bg"> <span class="expand ps2"> &nbsp; </span> </div>
           </div>
         </div>
         <div class="row">
           <div class="span3">
             <div class="ai">
-              <h3>Ai</h3>
+              <h3>.NET</h3>
             </div>
           </div>
           <div class="span5">
-            <h3>Illustrator <span>80%</span></h3>
+            <h3>Visual Studio <span>80%</span></h3>
             <div class="expand-bg"> <span class="expand ai2"> &nbsp; </span> </div>
           </div>
         </div>
         <div class="row">
           <div class="span3">
             <div class="html">
-              <h3>HTML5</h3>
+              <h3>PHP</h3>
             </div>
           </div>
           <div class="span5">
-            <h3>HTML5 <span>75%</span></h3>
+            <h3>Hypertext Preprocessor <span>75%</span></h3>
             <div class="expand-bg"> <span class="expand html2"> &nbsp; </span> </div>
           </div>
         </div>
         <div class="row">
           <div class="span3">
             <div class="css">
-              <h3>CSS3</h3>
+              <h3>CORS</h3>
             </div>
           </div>
           <div class="span5">
-            <h3>CSS3 <span>85%</span></h3>
+            <h3>Cross Platform <span>85%</span></h3>
             <div class="expand-bg"> <span class="expand css2"> &nbsp; </span> </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
       <!--END: Skills container-->
       <!-- Works container -->
       <div id="work" class="container">
-        <h2>My Work</h2>
+        <h2>Our Work</h2>
         <ul class="work-images">
           <li>
             <div><a class="fancybox-thumb" rel="fancybox-thumb" href="img/1.jpg" title="Image 01"><img src="img/1-thumb.jpg" /></a></div>
@@ -155,10 +155,12 @@
       </div>
       <!--END: Work container-->
       <!-- Resume container -->
-      <div id="resume" class="container">
-        <h2>My Resume</h2>
-        <h3>You can download my resume for your reference and I hope that we will meet very soon! :)</h3>
-        <div class="btn-center"> <a href="#" class="hire-me"><i class="icon-download"></i> Download Resume</a>
+      <div id="contacts" class="container">
+        <h2>Contacts</h2>
+        <h4>Subject with - "INFO", "REQUEST", "QUOTES" and "GENERAL"</h4>
+        <h4>Contact us at arraycore@qq.com</h4>
+        <h2>OR</h2>
+        <div class="btn-center"> <a href="#" class="hire-me"><i class="icon-download"></i> Download Apps</a>
           <h2>125kb</h2>
         </div>
       </div>
@@ -179,7 +181,7 @@
     <!-- Footer -->
     <div class="footer">
       <div class="container">
-        <p class="pull-left"><a href="http://dzyngiri.com">www.dzyngiri.com</a></p>
+        <p class="pull-left"><a href="http://arraycore.com">www.arraycore.com</a></p>
         <p class="pull-right"><a href="##myModal" role="button" data-toggle="modal"> <i class="icon-mail"></i> CONTACT</a></p>
       </div>
     </div>
