--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <div id="contacts" class="container">
         <h2>Contacts</h2>
         <h4>Subject with - "INFO", "REQUEST", "QUOTES" and "GENERAL"</h4>
-        <h4>Contact us at arraycore@qq.com</h4>
+        <h4>Contact us at dev@arraycore.com</h4>
         <h2>OR</h2>
         <div class="btn-center"> <a href="#" class="hire-me"><i class="icon-download"></i> Download Apps</a>
           <h2>125kb</h2>
