--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="span5">
           <h1>arrayCORE</h1>
           <h3>IT Solutions</h3>
-          <p> Hi, we provide the best solutions. By providing client witn an expert help desk, guaranteed delivery of applications system, mobile apps, cross-platform, and security. All encapsulated in a single outsourced service. We truly offer a total solution to all your IT needs. </p>
+          <p> Hi, we provide the best solutions. By providing client witn an expert support, guaranteed delivery of applications system, mobile apps, cross-platform, and security. All encapsulated in a single outsourced service. We truly offer a total solution to all your IT needs. </p>
           <a href="#" class="hire-me"><i class="icon-paper-plane"></i> Hire Us </a>
           <div class="row social">
             <ul class="social-icons">
