--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/style-single-page.css" rel="stylesheet">
     <link href="font/css/fontello.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- Handle SSL -->
+    <script type="text/javascript">
+    var host = "www.arraycore.com";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+    window.location.protocol = "https";
+    </script>
     <!-- Add jQuery library -->
     <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
     <!-- Add fancyBox main JS and CSS files -->
