equire bootstrap.js before jquery - try and error

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     window.location.protocol = "https";
     </script>
     <!-- Add jQuery library -->
-    <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- Add fancyBox main JS and CSS files -->
     <script type="text/javascript" src="js/jquery.fancybox.js?v=2.1.5"></script>
